--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
 
 #bookForm {
     z-index: 0;
+    display: ;
 }
 
 #bookForm-container {
@@ -45,9 +46,12 @@ body {
     height: 30px;
 }
 
-#cancelButton {
+#submitCancelButtons {
     align-self: center;
     height: fit-content;
     width: fit-content;
+}
+
+#submitCancelButtons>button {
     padding: 5px 10px;
 }
