Refactor for loop into a function so submitted books are added one at a time without repeating previous books

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 
 .cardContainer {
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
     padding: 10px;
     border: 2px solid black;
@@ -20,7 +21,6 @@ body {
 
 #bookForm {
     z-index: 0;
-    display: ;
 }
 
 #bookForm-container {
